--- a/web-nodejs/bower.json
+++ b/web-nodejs/bower.json
@@ -7,12 +7,13 @@
     "license": "Apache-2.0",
     "private": true,
     "devDependencies": {
-        "patternfly": "3.59.1",
-        "angular-patternfly": "4.18.6",
+        "patternfly": "3.59.0",
+        "angular-patternfly": "4.14.9",
         "isotope": "2.2.2",
         "imagesloaded": "4.1.1",
         "angular-route": "1.5.11",
-        "keycloak": "1.9.8"
+        "keycloak": "1.9.8",
+        "matchHeight": "0.7.0"
     },
     "resolutions": {
         "angular": "1.5.11",
